--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
           <td>⭐⭐⭐⭐⭐</td>
         <tr>
           <td>snel</td>
-          <td>⭐⭐⭐⭐⭐</td>
+          <td>⭐⭐⭐⭐</td>
         <tr>
           <td>snel leren</td>
           <td>⭐⭐⭐⭐</td>
         </tr>
         <tr>
-          <td>meevoelend</td>
-          <td>⭐⭐⭐</td>
+          <td>praktisch</td>
+          <td>⭐⭐⭐⭐</td>
         </tr>
       </table>
 
